--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
       <div class="content">
         <img src="burger.png" alt="" height="600">
-        <button id="start-btn">Snap!</button>
+        <button id="start-btn">Click!</button>
       </div>   
     <script> 
     
